--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> //Flappy Bird
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8" />
@@ -86,143 +86,95 @@
   const WIDTH = canvas.width;
   const HEIGHT = canvas.height;
 
-  // Passarinho
-  const bird = {
-    x: 80,
-    y: HEIGHT / 2,
-    width: 34,
-    height: 24,
-    gravity: 0.6,
-    lift: -10,
-    velocity: 0,
-  };
-
-  // Obstáculos (canos)
+  const bird = { x: 80, y: HEIGHT/2, width: 34, height: 24, gravity: 0.6, lift: -10, velocity: 0 };
   const pipeWidth = 60;
   const pipeGap = 150;
+  const pipeDistance = 200;
   let pipes = [];
-  let frameCount = 0;
-  let speed = 3;
-
   let score = 0;
   let gameRunning = false;
+
+  function createPipes() {
+    for (let i = 0; i < 3; i++) {
+      let topHeight = Math.random() * (HEIGHT - pipeGap - 200) + 50;
+      pipes.push({ x: WIDTH + i * (pipeWidth + pipeDistance), top: topHeight, bottom: topHeight + pipeGap });
+    }
+  }
 
   function drawBird() {
     ctx.fillStyle = '#ffcc00';
     ctx.beginPath();
-    ctx.ellipse(bird.x + bird.width / 2, bird.y + bird.height / 2, bird.width / 2, bird.height / 2, 0, 0, Math.PI * 2);
+    ctx.ellipse(bird.x + bird.width/2, bird.y + bird.height/2, bird.width/2, bird.height/2, 0, 0, Math.PI*2);
     ctx.fill();
-    // Olho
     ctx.fillStyle = '#000';
     ctx.beginPath();
-    ctx.arc(bird.x + bird.width / 2 + 6, bird.y + bird.height / 2 - 4, 5, 0, Math.PI * 2);
+    ctx.arc(bird.x + bird.width/2 + 6, bird.y + bird.height/2 - 4, 5, 0, Math.PI*2);
     ctx.fill();
   }
 
   function drawPipes() {
     ctx.fillStyle = '#228B22';
-    pipes.forEach(pipe => {
-      // Cano superior
-      ctx.fillRect(pipe.x, 0, pipeWidth, pipe.top);
-      // Cano inferior
-      ctx.fillRect(pipe.x, pipe.bottom, pipeWidth, HEIGHT - pipe.bottom);
-    });
-  }
-
-  function resetPipes() {
-    pipes = [];
-    for (let i = 0; i < 3; i++) {
-      let topHeight = Math.random() * (HEIGHT - pipeGap - 200) + 50;
-      pipes.push({
-        x: WIDTH + i * (pipeWidth + 200),
-        top: topHeight,
-        bottom: topHeight + pipeGap,
-      });
+    for (let i=0; i<pipes.length; i++){
+      let p = pipes[i];
+      ctx.fillRect(p.x, 0, pipeWidth, p.top);
+      ctx.fillRect(p.x, p.bottom, pipeWidth, HEIGHT - p.bottom);
     }
   }
 
   function updateBird() {
     bird.velocity += bird.gravity;
     bird.y += bird.velocity;
-
-    if (bird.y + bird.height > HEIGHT) {
-      bird.y = HEIGHT - bird.height;
-      bird.velocity = 0;
-      endGame();
-    }
-    if (bird.y < 0) {
-      bird.y = 0;
-      bird.velocity = 0;
-    }
+    if(bird.y + bird.height > HEIGHT) { bird.y = HEIGHT - bird.height; bird.velocity = 0; endGame(); }
+    if(bird.y < 0) bird.y = 0;
   }
 
   function updatePipes() {
-    for (const pipe of pipes) {
-      pipe.x -= speed;
-      if (pipe.x + pipeWidth < 0) {
-        pipe.x = WIDTH + (pipeWidth + 200) * 2;
-        pipe.top = Math.random() * (HEIGHT - pipeGap - 200) + 50;
-        pipe.bottom = pipe.top + pipeGap;
+    for (let i=0; i<pipes.length; i++){
+      let p = pipes[i];
+      p.x -= 3;
+      if(p.x + pipeWidth < 0){
+        p.x = WIDTH + pipeDistance * 2;
+        p.top = Math.random() * (HEIGHT - pipeGap - 200) + 50;
+        p.bottom = p.top + pipeGap;
         score++;
-        updateScore();
+        scoreEl.textContent = score;
       }
     }
   }
 
   function checkCollision() {
-    for (const pipe of pipes) {
-      // Colisão com cano superior
-      if (
-        bird.x + bird.width > pipe.x &&
-        bird.x < pipe.x + pipeWidth &&
-        bird.y < pipe.top
-      ) {
-        return true;
-      }
-      // Colisão com cano inferior
-      if (
-        bird.x + bird.width > pipe.x &&
-        bird.x < pipe.x + pipeWidth &&
-        bird.y + bird.height > pipe.bottom
-      ) {
-        return true;
+    for (let i=0; i<pipes.length; i++){
+      let p = pipes[i];
+      if(bird.x + bird.width > p.x && bird.x < p.x + pipeWidth){
+        if(bird.y < p.top || bird.y + bird.height > p.bottom){
+          return true;
+        }
       }
     }
     return false;
   }
 
-  function updateScore() {
-    scoreEl.textContent = score;
-  }
-
   function gameLoop() {
-    if (!gameRunning) return;
-
-    ctx.clearRect(0, 0, WIDTH, HEIGHT);
-
+    if(!gameRunning) return;
+    ctx.clearRect(0,0,WIDTH,HEIGHT);
     updateBird();
     updatePipes();
-
     drawBird();
     drawPipes();
-
-    if (checkCollision()) {
-      endGame();
-      return;
-    }
-
-    requestAnimationFrame(gameLoop);
+    if(checkCollision()) endGame();
+    else requestAnimationFrame(gameLoop);
   }
 
   function startGame() {
     score = 0;
-    bird.y = HEIGHT / 2;
+    bird.y = HEIGHT/2;
     bird.velocity = 0;
-    resetPipes();
+    pipes = [];
+    createPipes();
     gameRunning = true;
-    updateScore();
     gameOverEl.style.display = 'none';
     scoreEl.style.display = 'block';
+    scoreEl.textContent = score;
     gameLoop();
   }
 
@@ -234,15 +186,13 @@
   }
 
   window.addEventListener('keydown', e => {
-    if (e.code === 'Space' || e.key === ' ') {
-      if (!gameRunning) return;
+    if(e.code === 'Space' || e.key === ' '){
+      if(!gameRunning) return;
       bird.velocity = bird.lift;
     }
   });
 
-  restartBtn.addEventListener('click', () => {
-    startGame();
-  });
+  restartBtn.addEventListener('click', startGame);
 
   startGame();
 })();
